# rust-iot-poc

./: Cargo.toml  README.md  README_config.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/firmware/: Cargo.toml  config.toml
crates/firmware/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
