[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# The shared data model
common = { path = "../common" }

# Web server and Async runtime
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

# MQTT Client (using the async version)
rumqttc = "0.24"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
